// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`sliderItemComponent should be rendered correctly if three arguments passed 1`] = `
"<article class=\\"container container5\\">
<div class=\\"image-block\\">
  <img class=\\"image-block__image img5\\" src=\\"thumbnailUrl1\\" alt=\\"Youtube preview image\\">
</div>
<div class=\\"container-content\\">
  <header class=\\"container-content__header\\">
    <h2 class=\\"container-content__title\\">
      <a class=\\"container-content__title-link title-link5\\" href=\\"https://www.youtube.com/watch?v=testVideoId1\\" target=\\"_blank\\">title1</a>
    </h2>
    <span class=\\"container-content__channel channel5\\">channelTitle1</span>
  </header>
  <section class=\\"container-content__description description5\\">
    <p>description1</p>
  </section>
  <footer class=\\"container-content__footer-section\\">
    <div class=\\"container-content__footer\\">
      <div class=\\"container-content__published\\">
        <i class=\\"far fa-calendar-alt\\"></i>
        <span class=\\"container-content__date date5\\">publishedAt1</span>
      </div>
      <div>
        <i class=\\"far fa-eye\\"></i>
        <span class=\\"container-content__views views5\\">viewCount1</span>
      </div>
    </div>
   </footer>
</div>
</article><article class=\\"container container6\\">
<div class=\\"image-block\\">
  <img class=\\"image-block__image img6\\" src=\\"thumbnailUrl2\\" alt=\\"Youtube preview image\\">
</div>
<div class=\\"container-content\\">
  <header class=\\"container-content__header\\">
    <h2 class=\\"container-content__title\\">
      <a class=\\"container-content__title-link title-link6\\" href=\\"https://www.youtube.com/watch?v=testVideoId2\\" target=\\"_blank\\">title2</a>
    </h2>
    <span class=\\"container-content__channel channel6\\">channelTitle2</span>
  </header>
  <section class=\\"container-content__description description6\\">
    <p>description2</p>
  </section>
  <footer class=\\"container-content__footer-section\\">
    <div class=\\"container-content__footer\\">
      <div class=\\"container-content__published\\">
        <i class=\\"far fa-calendar-alt\\"></i>
        <span class=\\"container-content__date date6\\">publishedAt2</span>
      </div>
      <div>
        <i class=\\"far fa-eye\\"></i>
        <span class=\\"container-content__views views6\\">viewCount2</span>
      </div>
    </div>
   </footer>
</div>
</article>"
`;

exports[`sliderItemComponent should be rendered correctly if two arguments passed 1`] = `
"<article class=\\"container container0\\">
<div class=\\"image-block\\">
  <img class=\\"image-block__image img0\\" src=\\"thumbnailUrl1\\" alt=\\"Youtube preview image\\">
</div>
<div class=\\"container-content\\">
  <header class=\\"container-content__header\\">
    <h2 class=\\"container-content__title\\">
      <a class=\\"container-content__title-link title-link0\\" href=\\"https://www.youtube.com/watch?v=testVideoId1\\" target=\\"_blank\\">title1</a>
    </h2>
    <span class=\\"container-content__channel channel0\\">channelTitle1</span>
  </header>
  <section class=\\"container-content__description description0\\">
    <p>description1</p>
  </section>
  <footer class=\\"container-content__footer-section\\">
    <div class=\\"container-content__footer\\">
      <div class=\\"container-content__published\\">
        <i class=\\"far fa-calendar-alt\\"></i>
        <span class=\\"container-content__date date0\\">publishedAt1</span>
      </div>
      <div>
        <i class=\\"far fa-eye\\"></i>
        <span class=\\"container-content__views views0\\">viewCount1</span>
      </div>
    </div>
   </footer>
</div>
</article><article class=\\"container container1\\">
<div class=\\"image-block\\">
  <img class=\\"image-block__image img1\\" src=\\"thumbnailUrl2\\" alt=\\"Youtube preview image\\">
</div>
<div class=\\"container-content\\">
  <header class=\\"container-content__header\\">
    <h2 class=\\"container-content__title\\">
      <a class=\\"container-content__title-link title-link1\\" href=\\"https://www.youtube.com/watch?v=testVideoId2\\" target=\\"_blank\\">title2</a>
    </h2>
    <span class=\\"container-content__channel channel1\\">channelTitle2</span>
  </header>
  <section class=\\"container-content__description description1\\">
    <p>description2</p>
  </section>
  <footer class=\\"container-content__footer-section\\">
    <div class=\\"container-content__footer\\">
      <div class=\\"container-content__published\\">
        <i class=\\"far fa-calendar-alt\\"></i>
        <span class=\\"container-content__date date1\\">publishedAt2</span>
      </div>
      <div>
        <i class=\\"far fa-eye\\"></i>
        <span class=\\"container-content__views views1\\">viewCount2</span>
      </div>
    </div>
   </footer>
</div>
</article>"
`;
